--- a/ShopNova-Spring/src/main/resources/application.properties
+++ b/ShopNova-Spring/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=ShopNova
+spring.datasource.url=jdbc:h2:mem:ShopNova
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.h2.console.enabled=true
+spring.jpa.show-sql = true
+
+#can access the H2 web console at http://localhost:8080/h2-console.
+
+#   ensures that the schema is automatically updated if there are any changes to your entities.
+spring.jpa.hibernate.ddl-auto=update
+
+
+spring.jpa.defer-dataSource-initialization = true
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.platform=h2
+
